--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">TourGuideApp</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="historical_public_places">Historical/Public Places</string>
+    <string name="major_attraction">Major Attraction</string>
+    <string name="place_for_foodies">Place For Foodies</string>
+    <string name="accommodation">Accommodation</string>
 </resources>
