--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="major_attraction">Major Attraction</string>
     <string name="place_for_foodies">Place For Foodies</string>
     <string name="accommodation">Accommodation</string>
+    <string name="gwalior_tourism">gwalior tourism</string>
 </resources>
